Add some characters
Make differents.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Lwarrior.GitHub.io</h1>
-        <h2>Warrior Liu&#39;s blog.</h2>
+        <h2>Welcome to Warrior Liu&#39;s blog.</h2>
         <a href="https://github.com/lwarrior" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
